# Transmtf-HRT-Tracker

./: .gitignore  Algorithm Explanation.md  CLAUDE.md  LICENSE  calibration.ts  index.html  index.tsx  logic.ts  mipd.test.ts  mipd.ts  package-lock.json  package.json  personalModel.ts  pk.test.ts  pk.ts  tailwind.config.ts  types.ts  vite.config.ts  vitest.config.ts  wrangler.toml
.github/workflows/: android-build.yml  android-debug.yml  android-release.yml
docs/superpowers/plans/: 2026-06-27-transmtf-android-build.md  2026-07-16-result-chart-gesture-plan.md  2026-07-17-med-reminder-confirm-ux-plan.md  2026-07-19-history-batch-delete-plan.md  2026-07-20-android-widget.md  2026-07-23-ai-export-plan.md
docs/superpowers/specs/: 2026-06-27-transmtf-android-build-design.md  2026-06-29-universal-download-and-release-apk-design.md  2026-07-08-prog-drug-support-design.md  2026-07-16-result-chart-gesture-design.md  2026-07-17-med-reminder-confirm-ux-design.md  2026-07-19-android-exact-alarm-setup.md  2026-07-19-history-batch-delete-design.md  (+3 more)
eval/: mipdBenchmark.test.ts  syntheticEval.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/scripts/: AndroidManifest.snippet.xml  BootReceiver.kt  DownloadManager.kt  DownloadWriter.kt  FileOpener.kt  NativeBridge.kt  NotificationScheduler.kt  ReminderReceiver.kt  Rust.kt
src-tauri/src/: lib.rs  main.rs
src/api/: client.ts  types.ts
src/components/: AIExportModal.test.tsx  AIExportModal.tsx  AnnouncementModal.tsx  BasicInfoModal.tsx  BatchDoseModal.tsx  BatchPlanConfirmModal.tsx  ComplianceBanner.tsx  ConfirmButton.test.tsx  ConfirmButton.tsx  CustomGelManager.tsx  CustomSelect.tsx  DisclaimerModal.tsx  DoseFormModal.tsx  ExportModal.tsx  HistoryBulkActionBar.test.tsx  HistoryBulkActionBar.tsx  ImportModal.tsx  LabResultModal.tsx  MainLayout.tsx  MedicationHeatmap.tsx  ModelInfoModal.tsx  NumericKeypad.tsx  OIDCBindingGate.tsx  PasswordDisplayModal.tsx  PasswordInputModal.tsx  PlanEditModal.tsx  PlanList.tsx  QuickDosePanel.tsx  ReminderBanner.tsx  ReminderModal.tsx  ResultChart.theme.ts  ResultChart.tsx  ResultChartStatic.tsx  SecurityPasswordGate.tsx  SessionExpiredDialog.tsx  ShareImageModal.tsx  StatisticsModal.tsx  SyncConflictModal.tsx  TurnstileModal.tsx  WeightEditorModal.tsx  (+2 more)
src/contexts/: AppDataContext.tsx  AuthContext.tsx  CloudSyncContext.tsx  DialogContext.tsx  LanguageContext.tsx  SecurityPasswordContext.tsx  ThemeContext.tsx
src/hooks/: useConfirmButton.test.ts  useConfirmButton.ts  useFocusTrap.ts
src/i18n/: translations.ts
src/pages/: Account.tsx  AccountDevices.tsx  AccountOIDC.tsx  AccountShares.tsx  HistoryPage.tsx  LabPage.tsx  Login.tsx  OIDCCallback.tsx  OverviewPage.tsx  Register.tsx  SecurityPassword.tsx  SettingsPage.tsx  ShareView.tsx
src/utils/: aiExport.test.ts  aiExport.ts  authSession.ts  backup.test.ts  backup.ts  chartGesture.test.ts  chartGesture.ts  consoleBridge.test.ts  consoleBridge.ts  dataHash.test.ts  dataHash.ts  doseForm.test.ts  doseForm.ts  gelForm.test.ts  gelForm.ts  heatmapData.test.ts  heatmapData.ts  helpers.tsx  importData.test.ts  importData.ts  patch.test.ts  patch.ts  planCompliance.test.ts  planCompliance.ts  planReminder.test.ts  planReminder.ts  planSchedule.test.ts  planSchedule.ts  syncDecision.test.ts  syncDecision.ts  weight.ts
src/views/: HistoryView.selection.test.tsx  HistoryView.tsx  LabView.tsx  OverviewView.tsx
(+7 files in other folders)
