[package]
name = "hrt-tracker"
version = "1.3.0"
description = "HRT Recorder desktop app"
authors = ["SmirnovaOyama"]
license = "MIT"
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "^2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "^2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
lto = true
strip = "symbols"
codegen-units = 1
