[package]
name = "hrt-tracker"
version = "1.3.0"
description = "HRT Recorder desktop app"
authors = ["SmirnovaOyama"]
license = "MIT"
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "^2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "^2", features = [] }
log = "0.4"
android_logger = "0.14"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
jni = "0.21"
once_cell = "1"
base64 = "0.22"

[target.'cfg(target_os = "android")'.dependencies]
ndk-context = "0.1"

[lib]
name = "hrt_tracker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
lto = true
strip = "symbols"
codegen-units = 1
