[package]
name = "hrt-tracker"
version = "1.3.0"
description = "HRT Recorder desktop app"
authors = ["SmirnovaOyama"]
license = "MIT"
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "^2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "^2", features = [] }
log = "0.4"
android_logger = "0.14"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
jni = "0.21"
once_cell = "1"

[target.'cfg(target_os = "android")'.dependencies]
# tao 0.35 is what tauri-runtime-wry 2.x pins; we use its
# `pub fn main_android_context()` to grab the same Activity pointer that
# wry/tao already stored during `Rust.onActivityCreate(...)` — no Kotlin-side
# init dance required. Earlier attempt used the `ndk-context` crate and
# Kotlin-injected the JavaVM/Activity, but a JNI call then resolved the
# stored context_jobject to the wrong class (ThreadedRenderer$ProcessInitializer$1)
# when re-attached on a different thread, so all method lookups failed.
tao = { version = "0.35", default-features = false, features = ["rwh_06"] }

[lib]
name = "hrt_tracker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
lto = true
strip = "symbols"
codegen-units = 1
# panic=abort drops the unwind tables and the landing-pad code that the
# default `unwind` strategy emits into every .so. On a Tauri/Android APK
# this is the single biggest shrinker (each ABI's libhrt_tracker_lib.so
# goes from ~100 MB to ~10 MB in our build). We have no catch_unwind use
# anywhere, so abort is safe. The companion panic hook in lib.rs writes
# the panic info + backtrace to logcat before abort so crashes are still
# debuggable.
panic = "abort"
opt-level = "3"  # release default — best perf, ~5 MB larger than "z"
